--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
           <input type="number" name="" id="user-num" size="5" placeholder="Enter your destiny number...."/>
         </div>
         <div class="buttons">
+          <div id="answer" hidden></div>
           <button id="play-button">GUESS</button>
           <button id="reset-button">RESET</button>
         </div>
